added a list to push code

--- a/My first website/index.html
+++ b/My first website/index.html
@@ -7,11 +7,26 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <h3>My first blog</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas sunt totam veritatis ratione quos similique ipsam deserunt eos doloremque? Voluptatem repellendus placeat et fugiat ipsum molestiae facilis, soluta aut laborum!</p>
-    <h3>My second blog</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas sunt totam veritatis ratione quos similique ipsam deserunt eos doloremque? Voluptatem repellendus placeat et fugiat ipsum molestiae facilis, soluta aut laborum!</p>
-    <h3>My third blog</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas sunt totam veritatis ratione quos similique ipsam deserunt eos doloremque? Voluptatem repellendus placeat et fugiat ipsum molestiae facilis, soluta aut laborum!</p>
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste beatae vel laboriosam maiores, voluptas natus, saepe optio soluta incidunt itaque officiis, id magni aliquam minima! Itaque placeat sequi deserunt doloribus.</p>
+    </div>
+    <div>
+        <h3>My second website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste beatae vel laboriosam maiores, voluptas natus, saepe optio soluta incidunt itaque officiis, id magni aliquam minima! Itaque placeat sequi deserunt doloribus.</p>
+    </div>
+    <div>
+        <h3>My third website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste beatae vel laboriosam maiores, voluptas natus, saepe optio soluta incidunt itaque officiis, id magni aliquam minima! Itaque placeat sequi deserunt doloribus.</p>
+    </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"added a meaningful commit message</li>
+            <li>git push </li>
+        </ul>
+    </div>
+    
 </body>
 </html>
