added first , second. and third paraghrap, and a list and a picture

--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>Imag adding </h3>
+        <img src="Imran.png" alt="picture loading ">
+    </div>
 </body>
 </html>
